--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-clamp-lines": "^3.0.3",
     "react-dom": "^18.2.0",
+    "react-lines-ellipsis": "^0.15.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.0.7"
